# bytetaper

./: .cursorignore  .gitignore  .graphifyignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.control-plane.yml  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml
LICENSES/: AGPL-3.0-only.txt  LicenseRef-Commercial.txt
benchmarks/: README.md  collect_artifacts.sh  performance-thresholds.yaml
cmake/: CompilerOptions.cmake  Dependencies.cmake  TargetsAdmin.cmake  TargetsCache.cmake  TargetsCoalescing.cmake  TargetsControlPlane.cmake  TargetsExtproc.cmake  TargetsMetrics.cmake  TargetsOperational.cmake  TargetsPolicy.cmake  TargetsRuntime.cmake  TargetsTaperQuery.cmake  TargetsTests.cmake
docker/: benchmark.Dockerfile  dev.Dockerfile  production.Dockerfile
docs/: cache-invalidation.md  cache-policy.md  coalescing-policy.md  hash-policy.md  l2-cache-policy.md  materialized-filed-filtered-variant-cache.md  mutation-cache-invalidation.md  route-policy.md
operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  main.go
proto/: README.md
reports/: coalescing_observability_integration.md  plan_bt_037c_completion.md
tests/: apg_transform_context_test.cpp  cache_hot_path_regression_test.cpp  cache_hot_path_tail_regression_test.cpp  cache_invalidation_policy_test.cpp  cache_invalidation_target_resolver_test.cpp  cache_key_prepare_route_epoch_test.cpp  cache_key_prepare_stage_test.cpp  cache_key_route_epoch_test.cpp  cache_key_test.cpp  cache_metrics_test.cpp  coalescing_budget_policy_test.cpp  coalescing_cache_integration_test.cpp  coalescing_decision_test.cpp  coalescing_event_driven_wait_test.cpp  coalescing_fallback_tightened_test.cpp  coalescing_follower_wait_pool_test.cpp  coalescing_follower_wait_test.cpp  coalescing_leader_completion_test.cpp  coalescing_metrics_test.cpp  coalescing_policy_test.cpp  coalescing_policy_validator_test.cpp  compiled_route_runtime_test.cpp  compression_decision_stage_test.cpp  control_plane_guardrails_test.cpp  control_plane_metrics_test.cpp  control_plane_restart_durability_test.cpp  control_plane_security_integration_test.cpp  control_plane_security_test.cpp  control_plane_service_contract_test.cpp  default_pipeline_boundaries_test.cpp  default_pipeline_order_test.cpp  field_selection_test.cpp  field_variant_admission_stage_test.cpp  fleet_status_integration_test.cpp  fleet_status_service_test.cpp  follower_wait_guardrail_test.cpp  grpc_server_worker_lifecycle_test.cpp  hash_test.cpp  inflight_registry_test.cpp  (+86 more)
tools/: check_runtime_boundaries.py
(+480 files in other folders)
